@startuml
'https://plantuml.com/class-diagram
skinparam groupInheritance 2
' arrows with one dash display horizontally
' arrows with two dashes display vertically
namespace requests {
.Square_Request <|- .Customer_Request
.Customer_Request <|- .Customer_R_U_D

.Customer_R_U_D <|-- .Customer_Update
.Customer_R_U_D <|-- .Customer_Retrieve
.Customer_R_U_D <|-- .Customer_Delete

.Customer_Request <|-- .Customer_Create
.Customer_Request <|-- .Customer_List
.Customer_Request <|-- .Customer_Search
}

abstract class Square_Request {}
abstract class Customer_Request {
super: Square_Request
this._apiName = "customers";
}

abstract class Customer_R_U_D {
super: Customer_Request
constructor(id)
_displayName
this._endpoint:  `/${id}`
this._delivery
==
Simple Getters
==
Simple Setters
==
Complex Setters

+id (id)
..
adds the id to the URL endpoint
==
}
class Customer_Retrieve {
super: Customer_R_U_D
constructor(id)
_displayName
this._method: "GET"
this._delivery
==
Simple Getters
==
Simple Setters
==
Square Docs
 [[https://developer.squareup.com/reference/square/customers-api/retrieve-customer Retrieve Customer]]
==
}

class Customer_Delete {
super: Customer_R_U_D
constructor(id)
_displayName
this._method: "DELETE"
this._endpoint:
this._delivery
==
Simple Getters
==
Simple Setters
==
Square Docs
[[https://developer.squareup.com/reference/square/customers-api/delete-customer Delete Customer]]
==
}

class Customer_Create {
super: Customer_Request
constructor(customer)
_displayName
this._method: "POST"
this.idempotency_key
this._delivery
==
Simple Getters
==
Simple Setters
==
Complex Setters

+customers(customer)
..
sets this.customer
==
Square Docs
[[https://developer.squareup.com/reference/square/customers-api/create-customer Create Customer]]
==
}
class Customer_List {
super: Customer_Request
_displayName
this._method: "GET"
this._delivery
==
Simple Getters
==
Simple Setters
==
Square Docs
[[https://developer.squareup.com/reference/square/customers-api/list-customers List Customer]]
==
}
class Customer_Search {
super: Customer_Request
_displayName
this._method: "POST"
this._endpoint:
this._delivery
==
Simple Getters
==
Simple Setters
==
==
Methods
+query()
..
-Fuzzy
-Exact
==
Square Docs
[[https://developer.squareup.com/reference/square/customers-api/search-customers Search Customer]]
==
}


class Customer_Update {
super: Customer_R_U_D
constructor(id)
_displayName
this._method: "PUT"
this._body
==
Simple Getters
==
Simple Setters
==
==
Maker Methods
+make()
..
- constructs a Customer Object in this._body
==
Square Docs
[[https://developer.squareup.com/reference/square/customers-api/update-customer Update Customer]]
==
}


@enduml